add global status route
